@@ -8,6 +8,9 @@
     <artifactId>Jan2023POMSeries</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Jan2023POMSeries</name>
+    <url>https://www.opencart.com</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>${java-version}</maven.compiler.source>
@@ -17,7 +20,7 @@
 <!--        For Selenium-Java-->
         <selenium-java>4.10.0</selenium-java>
 <!--        For testNG-->
-        <testng-version>7.8.0</testng-version>
+        <testng-version>7.0.0</testng-version>
 <!--        For Allure Report-->
         <allure.version>2.22.1</allure.version>
         <aspectj.version>1.9.19</aspectj.version>
@@ -67,13 +70,6 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -92,13 +88,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>2.20</version>
                 <configuration>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/main/resources/testrunners/testng_edge.xml</suiteXmlFile>
+                        <suiteXmlFile>src/main/resources/testrunners/testng_regression.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
